# backend/src/main/java/org/cryptomator/hub/api/cipherduck/StorageProfileS3Dto.java
@@ -60,13 +60,13 @@ public sealed class StorageProfileS3Dto extends StorageProfileDto permits Storag
 	@Schema(description = "Buckets are create with name <bucket prefix><vault UUID>.", example = "cipherduck")
 	String bucketPrefix;
 
-	@JsonProperty(value = "stsRoleArnClient", required = true)
-	@Schema(description = "STS role for clients to assume to create buckets. Will be the same as stsRoleArnHub for AWS, different for MinIO.", example = "arn:aws:iam::<ACCOUNT ID>:role/cipherduck-createbucket")
-	String stsRoleArnClient;
+	@JsonProperty(value = "stsRoleCreateBucketClient", required = true)
+	@Schema(description = "STS role for clients to assume to create buckets. Will be the same as stsRoleCreateBucketHub for AWS, different for MinIO.", example = "arn:aws:iam::<ACCOUNT ID>:role/cipherduck-createbucket")
+	String stsRoleCreateBucketClient;
 
-	@JsonProperty(value = "stsRoleArnHub", required = true)
-	@Schema(description = "STS role for frontend to assume to create buckets (used with inline policy and passed to hub storage). Will be the same as stsRoleArnClient for AWS, different for MinIO.", example = "arn:aws:iam::<ACCOUNT ID>:role/cipherduck-createbucket")
-	String stsRoleArnHub;
+	@JsonProperty(value = "stsRoleCreateBucketHub", required = true)
+	@Schema(description = "STS role for frontend to assume to create buckets (used with inline policy and passed to hub storage). Will be the same as stsRoleCreateBucketClient for AWS, different for MinIO.", example = "arn:aws:iam::<ACCOUNT ID>:role/cipherduck-createbucket")
+	String stsRoleCreateBucketHub;
 
 	@JsonProperty("stsEndpoint")
 	@Schema(description = "STS endpoint to use for AssumeRoleWithWebIdentity and AssumeRole for getting a temporary access token passed to the storage. Defaults to AWS SDK default.", nullable = true)
@@ -88,7 +88,7 @@ public sealed class StorageProfileS3Dto extends StorageProfileDto permits Storag
 		// jackson
 	}
 
-	public StorageProfileS3Dto(final UUID id, final String name, final Protocol protocol, final boolean archived, final String scheme, final String hostname, final Integer port, final boolean withPathStyleAccessEnabled, final S3_STORAGE_CLASSES storageClass, final String region, final List<String> regions, final String bucketPrefix, final String stsRoleArnClient, final String stsRoleArnHub, final String stsEndpoint, final boolean bucketVersioning, final Boolean bucketAcceleration, final S3_SERVERSIDE_ENCRYPTION bucketEncryption) {
+	public StorageProfileS3Dto(final UUID id, final String name, final Protocol protocol, final boolean archived, final String scheme, final String hostname, final Integer port, final boolean withPathStyleAccessEnabled, final S3_STORAGE_CLASSES storageClass, final String region, final List<String> regions, final String bucketPrefix, final String stsRoleCreateBucketClient, final String stsRoleCreateBucketHub, final String stsEndpoint, final boolean bucketVersioning, final Boolean bucketAcceleration, final S3_SERVERSIDE_ENCRYPTION bucketEncryption) {
 		super(id, name, protocol, archived);
 		this.scheme = scheme;
 		this.hostname = hostname;
@@ -99,8 +99,8 @@ public sealed class StorageProfileS3Dto extends StorageProfileDto permits Storag
 		this.region = region;
 		this.regions = regions;
 		this.bucketPrefix = bucketPrefix;
-		this.stsRoleArnClient = stsRoleArnClient;
-		this.stsRoleArnHub = stsRoleArnHub;
+		this.stsRoleCreateBucketClient = stsRoleCreateBucketClient;
+		this.stsRoleCreateBucketHub = stsRoleCreateBucketHub;
 		this.stsEndpoint = stsEndpoint;
 		this.bucketVersioning = bucketVersioning;
 		this.bucketAcceleration = bucketAcceleration;
@@ -109,7 +109,7 @@ public sealed class StorageProfileS3Dto extends StorageProfileDto permits Storag
 	}
 
 	static StorageProfileS3Dto fromEntity(final StorageProfileS3 storageProfile) {
-		return new StorageProfileS3Dto(storageProfile.id, storageProfile.name, Protocol.s3, storageProfile.archived, storageProfile.scheme, storageProfile.hostname, storageProfile.port, storageProfile.withPathStyleAccessEnabled, S3_STORAGE_CLASSES.valueOf(storageProfile.storageClass), storageProfile.region, storageProfile.regions, storageProfile.bucketPrefix, storageProfile.stsRoleArnClient, storageProfile.stsRoleArnHub, storageProfile.stsEndpoint, storageProfile.bucketVersioning, storageProfile.bucketAcceleration, S3_SERVERSIDE_ENCRYPTION.valueOf(storageProfile.bucketEncryption));
+		return new StorageProfileS3Dto(storageProfile.id, storageProfile.name, Protocol.s3, storageProfile.archived, storageProfile.scheme, storageProfile.hostname, storageProfile.port, storageProfile.withPathStyleAccessEnabled, S3_STORAGE_CLASSES.valueOf(storageProfile.storageClass), storageProfile.region, storageProfile.regions, storageProfile.bucketPrefix, storageProfile.stsRoleCreateBucketClient, storageProfile.stsRoleCreateBucketHub, storageProfile.stsEndpoint, storageProfile.bucketVersioning, storageProfile.bucketAcceleration, S3_SERVERSIDE_ENCRYPTION.valueOf(storageProfile.bucketEncryption));
 	}
 
 	public StorageProfileS3 toEntity() {
@@ -125,8 +125,8 @@ public sealed class StorageProfileS3Dto extends StorageProfileDto permits Storag
 		storageProfile.region = this.region;
 		storageProfile.regions = this.regions;
 		storageProfile.bucketPrefix = this.bucketPrefix;
-		storageProfile.stsRoleArnClient = this.stsRoleArnClient;
-		storageProfile.stsRoleArnHub = this.stsRoleArnHub;
+		storageProfile.stsRoleCreateBucketClient = this.stsRoleCreateBucketClient;
+		storageProfile.stsRoleCreateBucketHub = this.stsRoleCreateBucketHub;
 		storageProfile.stsEndpoint = this.stsEndpoint;
 		storageProfile.bucketVersioning = this.bucketVersioning;
 		storageProfile.bucketAcceleration = this.bucketAcceleration;
@@ -166,12 +166,12 @@ public sealed class StorageProfileS3Dto extends StorageProfileDto permits Storag
 		return bucketPrefix;
 	}
 
-	public String stsRoleArnClient() {
-		return stsRoleArnClient;
+	public String stsRoleCreateBucketClient() {
+		return stsRoleCreateBucketClient;
 	}
 
-	public String stsRoleArnHub() {
-		return stsRoleArnHub;
+	public String stsRoleCreateBucketHub() {
+		return stsRoleCreateBucketHub;
 	}
 
 	public String stsEndpoint() {
